package com.neliyenn;

import org.springframework.boot.SpringApplication;
import org.springframework.boot.autoconfigure.SpringBootApplication;

@SpringBootApplication
public class ForumApp {
    public static void main(String[] args) {

        SpringApplication.run(ForumApp.class, args);
    }
}