package com.neliyenn.service;

import com.neliyenn.model.Comment;

public interface CommentService {

    Comment save(Comment comment);
}
